Fix App Runner startup by lazy-loading models and safe static mounting

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -4,11 +4,13 @@ runtime: python311
 build:
   commands:
     build:
-      - echo "build stage"
+      - python3 -m pip install --upgrade pip
+      - python3 -m pip install -r requirements.txt -t /app/vendor
 
 run:
-  pre-run:
-    - pip3 install -r requirements.txt
-  command: python3 -m hypercorn lambda_app.web_app:app --bind 0.0.0.0:8080
+  env:
+    - name: PYTHONPATH
+      value: /app/vendor
+  command: python3 -m hypercorn lambda_app.web_app:app --bind 0.0.0.0:8080 --log-level debug --access-logfile - --error-logfile -
   network:
     port: 8080
