--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,26 +1,37 @@
+# ===== Base image =====
 FROM python:3.11-slim
 
-# 環境変数
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-# OS依存（opencv用）
-RUN apt-get update && apt-get install -y \
+# ===== OS deps (for OpenCV / libGL) =====
+# libgl1  -> provides libGL.so.1
+# libglib2.0-0 -> often required by OpenCV
+RUN apt-get update && apt-get install -y --no-install-recommends \
     libgl1 \
     libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
+# ===== Environment =====
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    HOME=/tmp \
+    MPLCONFIGDIR=/tmp \
+    YOLO_CONFIG_DIR=/tmp \
+    ULTRALYTICS_NO_AUTOINSTALL=True \
+    YOLO_VERBOSE=False
+
 WORKDIR /app
 
-# 先に requirements（キャッシュ効く）
-COPY requirements.txt .
-RUN pip install --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
+# ===== Install Python deps =====
+# Copy requirements first for better layer caching
+COPY requirements.txt /app/requirements.txt
+RUN python -m pip install --upgrade pip \
+ && python -m pip install --no-cache-dir -r /app/requirements.txt
 
-# ソースコピー
-COPY . .
+# ===== Copy app source =====
+COPY . /app
 
-# App Runner は 8080 固定
+# ===== App Runner expects app listens on 8080 =====
 EXPOSE 8080
 
-CMD ["uvicorn", "lambda_app.web_app:app", "--host", "0.0.0.0", "--port", "8080"]
+# ===== Start =====
+# (Hypercorn is fine; App Runner TCP health check will pass if this starts)
+CMD ["python3", "-m", "hypercorn", "lambda_app.web_app:app", "--bind", "0.0.0.0:8080", "--log-level", "info", "--access-logfile", "-", "--error-logfile", "-"]
